fix line spacing

--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@ body {
   justify-content: center;
   align-items: center;
   height: 700px;
-  margin: 0;
+  margin: 20px;
   background: url(sunset.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  font: 16px/0.5 sans-serif;
+  font: 16px/1.5 sans-serif;
 }
 .wrapper {
   display: flex;
